different take on the ffx overflow fix, this one is better because it doesnt break flex-grow.

--- a/styles/global.css
+++ b/styles/global.css
@@ -119,13 +119,11 @@ textarea {
   height: 70px;
   width: 70px;
 }
-.nav-pagination-wrapper {
-  align-items: center;
-  overflow: hidden;
-}
+.nav-pagination-wrapper { align-items: center; }
 .nav-pagination {
   background-color: #fff;
   position: relative;
+  overflow: hidden;
 }
 .nav-icon-width { width: 70px;  }
 .nav-icon-height { height: 70px; }
